[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "django-orderable-tree"
version = "0.1.0"
description = "Tree structure for hierarchical data"
readme = "README.md"
authors = [{ name = "Vitaly Budovski", email = "vbudovski@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
keywords = ["tree", "database", "hierarchical"]
dependencies = [
    "django >= 3.2",
]
requires-python = ">=3.8"


[project.optional-dependencies]
dev = ["isort", "flake8", "pytest", "pytest-django", "pytest-cov", "psycopg2"]


[project.urls]
homepage = "https://github.com/vbudovski/django-tree"


[tool.poetry]
name = "django-orderable-tree"
version = "0.1.0"
description = "Tree structure for hierarchical data"
authors = [ "Vitaly Budovski <vbudovski@gmail.com>" ]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"


[tool.poetry.dev-dependencies]
black = "*"
isort = ">=5"
toml = "*"
flake8 = "*"
pytest = "*"
pytest-django = "*"
pytest-cov = "*"
psycopg2 = "*"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 110
force_single_line = true
force_sort_within_sections = true
order_by_type = false
filter_files = true
skip_glob = [
	"*/venv/*",
]